[gd_scene load_steps=5 format=3 uid="uid://cxhghnc6fqebu"]

[ext_resource type="Script" path="res://scenes/note_lane/note_lane.gd" id="1_ipfhx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qbr3x"]

[sub_resource type="CircleShape2D" id="CircleShape2D_tbutt"]
radius = 40.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pm3ef"]
size = Vector2(128, 16)

[node name="NoteLane" type="Node2D"]
position = Vector2(64, 640)
script = ExtResource("1_ipfhx")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -64.0
offset_top = -640.0
offset_right = -64.0
offset_bottom = -640.0
metadata/_edit_group_ = true

[node name="LaneBackground" type="ColorRect" parent="UI"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 720.0
color = Color(0.819608, 0.819608, 0.819608, 0.384314)

[node name="PerfectArea" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PerfectArea"]
shape = SubResource("CircleShape2D_qbr3x")

[node name="Hitspot" type="Polygon2D" parent="."]
color = Color(0.176471, 0.176471, 0.176471, 0.372549)
polygon = PackedVector2Array(0, -48, -32, -32, -48, 0, -32, 32, 0, 48, 32, 32, 48, 0, 32, -32)

[node name="HitspotFlashCooldown" type="Timer" parent="Hitspot"]
wait_time = 0.1
one_shot = true

[node name="NoteDetector" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoteDetector"]
shape = SubResource("CircleShape2D_tbutt")

[node name="NoteSpawnPosition" type="Marker2D" parent="."]
position = Vector2(0, -704)

[node name="NoteCooldownTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 120)
shape = SubResource("RectangleShape2D_pm3ef")

[connection signal="area_entered" from="PerfectArea" to="." method="_on_perfect_area_area_entered"]
[connection signal="area_exited" from="PerfectArea" to="." method="_on_perfect_area_area_exited"]
[connection signal="timeout" from="Hitspot/HitspotFlashCooldown" to="." method="_on_hitspot_flash_cooldown_timeout"]
[connection signal="area_entered" from="NoteDetector" to="." method="_on_note_detector_area_entered"]
[connection signal="area_exited" from="NoteDetector" to="." method="_on_note_detector_area_exited"]
[connection signal="input_event" from="NoteDetector" to="." method="_on_note_detector_input_event"]
[connection signal="timeout" from="NoteCooldownTimer" to="." method="_on_note_cooldown_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
